<resources>
    <string name="app_name">Another To-Do List</string>
    <string name="logo">logo</string>
    <string name="tasks">Tasks</string>
    <string name="statistics">Statistics</string>


    <string name="default_error">Something is wrong, try again…</string>
    <string name="get_error">No task found.</string>
    <string name="save_error">Error saving task.</string>
    <string name="delete_error">Error saving task.</string>
    <string name="no_tasks">No tasks</string>
    <string name="no_tasks_text">Nothing to do</string>
    <string name="create_task">Create a new task</string>
    <string name="filter_task_string">Filter task</string>
    <string name="all_string">All</string>
    <string name="active_string">Active</string>
    <string name="completed_string">Completed</string>
    <string name="settings">Settings</string>
    <string name="detail">Task detail</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task description</string>
    <string name="save_bt">Save</string>
    <string name="empty_title_warning">Enter a task title</string>
    <string name="delete_task">Delete task</string>
    <string name="edit_task">Edit task</string>
    <string name="message_dialog_delete">Do you want to delete this task?</string>
    <string name="title_dialog_delete">Be careful</string>
    <string name="positive_dialog_delete">Yep</string>
    <string name="negative_dialog_delete">Nope</string>

    <string name="huge_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim tellus ipsum. Sed ac libero sagittis, lacinia dui eget, facilisis metus. Aliquam volutpat posuere libero, sit amet convallis libero vestibulum in. Fusce quis sagittis elit. Vivamus eleifend tempor lorem sed fringilla. Fusce sit amet lacinia massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur auctor iaculis dolor, quis rhoncus augue auctor sed. Pellentesque sed pretium metus, at tincidunt justo. Maecenas ultrices at ex id placerat.</string>
    <string name="default_description">No task description…</string>
    <string name="default_statistic">You have no tasks…</string>
    <string name="total_statistic">Total of %1$s tasks, where:</string>
    <string name="active_statistic">Active tasks: %.1f%%</string>
    <string name="completed_statistic">Completed tasks: %.1f%%</string>
    <string name="customize">Customize</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_explain">Apply dark theme for this app</string>
    <string name="support_us">Support us</string>
    <string name="rate_us_string">Rate us</string>
    <string name="rate_us_explain">Please take a moment to rate and review it in the Google Play Store</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="share_explain">Support us sharing the app with friends</string>
    <string name="donate">Donate</string>
    <string name="donate_explain">If you love this app, buy me a beer</string>
    <string name="database">Database</string>
    <string name="clean_up_the_database">Clean up the Database</string>
    <string name="clean_explain">Unregister all database tasks</string>
    <string name="message_dialog_delete_all">Do you want to delete all tasks?</string>
    <string name="delete_response">Deleted All tasks!</string>
    <string name="share">Share Another To-Do List:</string>
    <string name="share_message">Look this app:</string>
</resources>
