<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_home"
    android:label="Tasks"
    app:startDestination="@+id/home_dest">
    <fragment
        android:id="@+id/home_dest"
        android:name="br.dev.valmirt.anothertodolist.ui.home.HomeFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_to_statistic"
            app:destination="@id/statistic_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/home_to_settings"
            app:destination="@id/settings_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/home_to_create"
            app:destination="@+id/create_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/home_to_detail"
            app:destination="@id/detail_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/statistic_dest"
        android:name="br.dev.valmirt.anothertodolist.ui.home.statistic.StatisticFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistic" />
    <fragment
        android:id="@+id/settings_dest"
        android:name="br.dev.valmirt.anothertodolist.ui.home.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/create_dest"
        android:name="br.dev.valmirt.anothertodolist.ui.home.create.CreateFragment"
        android:label="New Task"
        tools:layout="@layout/fragment_create" >
        <action
            android:id="@+id/create_to_home"
            app:destination="@id/home_dest"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@+id/home_dest"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detail_dest"
        android:name="br.dev.valmirt.anothertodolist.ui.home.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/detail_to_home"
            app:destination="@id/home_dest"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@+id/home_dest"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>